Prevent text wrapping on reveal button.

--- a/src/style.scss
+++ b/src/style.scss
@@ -29,6 +29,7 @@
         color: #fff;
         font-size: 0.75rem;
         line-height: 1em;
+        white-space: nowrap;
         text-transform: uppercase;
         cursor: pointer;
         z-index: 2;
